tests/snapshots/run__compiler_cli_output@add.must.snap
---
source: tests/run.rs
expression: combined_output
input_file: tests/inputs/add.must
---
EXIT CODE: 0

--- STDOUT ---
Program evaluated to: Int(
    52,
)

--- STDERR ---
