tests/snapshots/run__compiler_cli_output@array.must.snap
---
source: tests/run.rs
expression: combined_output
input_file: tests/inputs/array.must
---
EXIT CODE: 0

--- STDOUT ---

--- STDERR ---
