tests/snapshots/run__compiler_cli_output@error.must.snap
---
source: tests/run.rs
expression: combined_output
input_file: tests/inputs/error.must
---
EXIT CODE: 0

--- STDOUT ---

--- STDERR ---
