tests/snapshots/run__compiler_cli_output@main.must.snap
---
source: tests/run.rs
expression: combined_output
input_file: tests/inputs/main.must
---
EXIT CODE: 0

--- STDOUT ---
output: 42
output: 7
output: 8
output: 9
output: 10
Program evaluated to: Tuple(
    [],
)

--- STDERR ---
