tests/snapshots/run__compiler_cli_output@slice.must.snap
---
source: tests/run.rs
expression: combined_output
input_file: tests/inputs/slice.must
---
EXIT CODE: 0

--- STDOUT ---
output: 4
output: 5
output: 6
output: 9
output: 13
Program evaluated to: Int(
    6,
)

--- STDERR ---
