tests/snapshots/run__compiler_cli_output@sret.must.snap
---
source: tests/run.rs
expression: combined_output
input_file: tests/inputs/sret.must
---
EXIT CODE: 0

--- STDOUT ---
Program evaluated to: Int(
    15,
)

--- STDERR ---
